examples/test/testpolicy10859.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy10859
  namespace: namespace442
spec:
  podSelector:
    matchLabels:
      key47: value31
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key8: value47
          key39: value10
          key27: value9
      podSelector:
        matchLabels:
          key10: value38
          key37: value25
          key33: value35
